# text2phoneme

./: .gitignore  README.md  config.py  dataset.py  hf_download.py  inference.py  pyproject.toml  train.py  train.yaml  tutorial.ipynb
assets/: smoke.yaml  text_tokenizer.json
model/: model.yaml  net.py
model/components/: __init__.py  attention.py  blocks.py  decoder.py  embeddings.py  encoder.py  feed_forward.py
resource/: phoneme_vi.txt
